<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MarkExit">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout4"
        android:layout_width="390dp"
        android:layout_height="687dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView39"
            android:layout_width="74dp"
            android:layout_height="60dp"
            android:scaleType="centerInside"
            app:layout_constraintBottom_toTopOf="@+id/guideline16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2"
            app:srcCompat="@drawable/epfo_logo" />

        <ImageView
            android:id="@+id/imageView42"
            android:layout_width="314dp"
            android:layout_height="58dp"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="4dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView39"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.166"
            app:srcCompat="@drawable/pfbanner" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="70dp" />

        <TextView
            android:id="@+id/textView145"
            android:layout_width="335dp"
            android:layout_height="127dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/white_rectangle"
            app:layout_constraintBottom_toTopOf="@+id/guideline17"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline16"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/imageView46"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView145"
            app:layout_constraintStart_toStartOf="@+id/textView145"
            app:layout_constraintTop_toTopOf="@+id/textView145"
            app:layout_constraintVertical_bias="0.142"
            app:srcCompat="@drawable/ic_baseline_menu_24" />

        <TextView
            android:id="@+id/textView146"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="Employment"
            app:layout_constraintBottom_toBottomOf="@+id/imageView46"
            app:layout_constraintEnd_toEndOf="@+id/textView145"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/imageView46"
            app:layout_constraintTop_toTopOf="@+id/imageView46"
            app:layout_constraintVertical_bias="0.78" />


        <TextView
            android:id="@+id/textView148"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Select Employer"
            app:layout_constraintBottom_toTopOf="@+id/spinner5"
            app:layout_constraintEnd_toEndOf="@+id/textView145"
            app:layout_constraintStart_toStartOf="@+id/textView145"
            app:layout_constraintTop_toBottomOf="@+id/textView146" />

        <Spinner
            android:id="@+id/spinner5"
            android:layout_width="230dp"
            android:layout_height="27dp"
            android:layout_marginStart="24dp"
            android:entries="@array/Employers"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="@+id/textView145"
            app:layout_constraintEnd_toEndOf="@+id/textView148"
            app:layout_constraintStart_toStartOf="@+id/textView145"
            app:layout_constraintTop_toBottomOf="@+id/textView146"
            app:layout_constraintVertical_bias="0.893" />

        <ImageView
            android:id="@+id/imageView47"
            android:layout_width="41dp"
            android:layout_height="43dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline17"
            app:srcCompat="@drawable/ic_baseline_calendar_month_24" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="222dp" />

        <TextView
            android:id="@+id/textView149"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="Select Date of Exit(EPF) :-"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/imageView47"
            app:layout_constraintStart_toEndOf="@+id/imageView47"
            app:layout_constraintTop_toTopOf="@+id/imageView47"
            app:layout_constraintVertical_bias="0.583" />

        <TextView
            android:id="@+id/textView150"
            android:layout_width="129dp"
            android:layout_height="21dp"
            android:gravity="center"
            android:hint="Enter Date"
            app:layout_constraintBottom_toBottomOf="@+id/textView149"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.307"
            app:layout_constraintStart_toEndOf="@+id/textView149"
            app:layout_constraintTop_toTopOf="@+id/textView149"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/imageView49"
            android:layout_width="41dp"
            android:layout_height="43dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline19"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView47"
            app:srcCompat="@drawable/cancel" />

        <TextView
            android:id="@+id/textView151"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="Select reason of Exit       :-"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/imageView49"
            app:layout_constraintStart_toEndOf="@+id/imageView49"
            app:layout_constraintTop_toTopOf="@+id/imageView49"
            app:layout_constraintVertical_bias="0.458" />

        <Spinner
            android:id="@+id/spinner6"
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:entries="@array/Reason"
            app:layout_constraintBottom_toBottomOf="@+id/textView151"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.555"
            app:layout_constraintStart_toEndOf="@+id/textView151"
            app:layout_constraintTop_toTopOf="@+id/textView151" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="377dp" />

        <RadioButton
            android:id="@+id/radioButton6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="36dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline20"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline19"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView152"
            android:layout_width="300dp"
            android:layout_height="77dp"
            android:text="I hereby consent to provide my Aadhaar Number,
Biometric and/ or One Time Pin(OTP) data for Aadhaar based authentication
 for the purpose of esatblishing my identity"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/radioButton6"
            app:layout_constraintStart_toEndOf="@+id/radioButton6"
            app:layout_constraintTop_toTopOf="@+id/radioButton6"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="505dp" />

        <TextView
            android:id="@+id/textView153"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="Enter aadhaar based OTP"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline20" />

        <Button
            android:id="@+id/buttonOTPExit"
            android:layout_width="134dp"
            android:layout_height="54dp"
            android:background="@drawable/button"
            android:text="Send OTP"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textView153"
            app:layout_constraintHorizontal_bias="0.464"
            app:layout_constraintStart_toStartOf="@+id/textView153"
            app:layout_constraintTop_toBottomOf="@+id/textView153"
            app:layout_constraintVertical_bias="0.258" />

        <RadioButton
            android:id="@+id/radioButton7"
            android:layout_width="36dp"
            android:layout_height="31dp"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView155"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="I have read the below points carefully."
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/radioButton7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.036"
            app:layout_constraintStart_toEndOf="@+id/radioButton7"
            app:layout_constraintTop_toTopOf="@+id/radioButton7" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="391dp"
        android:layout_height="118dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView156"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lineone"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/textView157"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/linetwo"
                android:textColor="@color/black"/>


            <TextView
                android:id="@+id/textView158"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/linethree"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/textView159"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/linefour"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/textView160"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/linefive"
                android:textColor="@color/black"/>




        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>